--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,12 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: echo Bizon, First action!
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install docker 
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          apt-get update
+          apt install docker.io 
+          docker version 
+          echo Jobs success!
