--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Install docker 
         run: |
-          apt-get update
-          apt install docker.io 
-          docker version 
+          sudo apt-get update
+          sudo apt install docker.io 
+          sudo docker version 
           echo Jobs success!
