--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Install docker 
         run: |
           sudo apt-get update
+          sudo apt-get upgrade
+          sudo apt update
+          sudo apt upgrade
           sudo apt install docker.io 
           sudo docker version 
           echo Jobs success!
